# SportsScheduling

./: CMakeLists.txt  Problem.cpp  Problem.h  README.md  SA.config  START.bat  Solver.cpp  Solver.h  constraints.config  contraints.config  instance.xml  main.cpp  notes  paramsSA.h  test.xml
Configs/: SA.config  SA0.config  SA0A.config  SA0R.config  SA1.config  SA1A.config  SA1R.config  SA2.config  SA2A.config  SA2R.config  SA3.config  SA3A.config  SA3R.config  SA4.config  SA4A.config  SA4R.config  SA5.config  SA5A.config  SA5R.config  SA6.config  SA6A.config  SA6R.config  SA7.config  SA7A.config  SA7R.config  SA8A.config  SA8R.config  SA9A.config  SA9R.config  START.bat
Constraints/: BasicConstraint.cpp  BasicConstraint.h  ConstraintType.h  IConstraint.h  Mode.h  PhasedConstraint.cpp  PhasedConstraint.h
Constraints/BR/: ConstraintBR1.cpp  ConstraintBR1.h  ConstraintBR2.cpp  ConstraintBR2.h
Constraints/CA/: ConstraintCA1.cpp  ConstraintCA1.h  ConstraintCA2.cpp  ConstraintCA2.h  ConstraintCA3.cpp  ConstraintCA3.h  ConstraintCA4.cpp  ConstraintCA4.h
Constraints/FA/: ConstraintFA2.cpp  ConstraintFA2.h
Constraints/GA/: ConstraintGA1.cpp  ConstraintGA1.h
Constraints/SE1/: ConstraintSE1.cpp  ConstraintSE1.h
FileParser/: FileParser.cpp  FileParser.h
Problem/: Problem.cpp  Problem.h
SimulatedAnnealing/: Solver.cpp  Solver.h  paramsSA.h
Solution/: Meeting.h  Solution.cpp  Solution.h
XMLParser/: XMLParser.cpp  XMLParser.h
